[metadata]
name = authoriz
version = 0.0.1
description = Django-based authorization framework.
long_description = file: README.rst
url = https://pypi.org/project/authoriz/
author = Ilya Vouk
author_email = ilya.vouk@gmail.com
license = BSD-2
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django==3.2.12
    python-rapidjson==1.6
    djangorestframework==3.13.1
